# ImGUIExamples

Example_1/: CMakeLists.txt
Example_1/src/: main.cpp
SharedCode/: CMakeLists.txt
SharedCode/libs/imgui/: CMakeLists.txt
SharedCode/libs/imgui/src/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
SharedCode/src/: Helpers.cpp  Helpers.h
